[workspace]

resolver = "2"

members = [
    "frostbow", "frostbow-sql", "frostbow-glue"
]

[workspace.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.5", features = ["derive"] }
datafusion = "45.0"
datafusion-cli = { version = "45" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
object_store = { version = "0.11.2", features = ["aws", "gcp"] }
iceberg-rust = { version = "0.7" }
datafusion_iceberg = { version = "0.7" }
async-trait = "0.1"

