[workspace]

resolver = "2"

members = [
    "frostbow", "frostbow-sql", "frostbow-glue"
]

[workspace.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.5", features = ["derive"] }
datafusion = "50"
datafusion-cli = { version = "50" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
object_store = { version = "0.12", features = ["aws", "gcp"] }
iceberg-rust = { version = "0.9" }
datafusion_iceberg = { version = "0.9" }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

