[workspace]

resolver = "2"

members = [
    "frostbow", "frostbow-sql", "frostbow-glue"
]

[workspace.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.5", features = ["derive"] }
datafusion = "53"
datafusion-cli = { version = "53" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
object_store = { version = "0.13", features = ["aws", "gcp"] }
iceberg-rust = { version = "0.10" }
datafusion_iceberg = { version = "0.10" }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

