[package]
name = "frostbow-glue"
version = "0.2.0"
edition = "2021"

description = "Package to use Apache Datafusion with Apache Iceberg"

license = "Apache-2.0"

[dependencies]
clap = { workspace = true }
datafusion = { workspace = true }
datafusion-cli = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true }
iceberg-rust = { workspace = true }
datafusion_iceberg = { workspace = true }
iceberg-glue-catalog = { version = "0.7" }
async-trait = { workspace = true }
frostbow = { path = "../frostbow" }
openssl.workspace = true
aws-config = "1.5.10"
