[package]
name = "frostbow-sql"
version = "0.1.0"
edition = "2021"

description = "Package to use Apache Datafusion with Apache Iceberg"

license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
datafusion = "40.0"
datafusion-cli = "40.0"
reqwest = "0.11"
reqwest-middleware = "0.2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
object_store = { version = "0.10.1", features = ["aws", "gcp"] }
iceberg-rust = { version = "0.5" }
datafusion_iceberg = { version = "0.5" }
iceberg-sql-catalog = { version = "0.5" }
async-trait = "0.1"
url = "2.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "any", "sqlite", "postgres", "mysql"], default-features = false }
frostbow = { path = "../frostbow", no-default-features = true }
