[package]
name = "frostbow-sql"
version = "0.1.0"
edition = "2021"

description = "Package to use Apache Datafusion with Apache Iceberg"

license = "Apache-2.0"

[dependencies]
clap = { workspace = true }
datafusion = { workspace = true }
frostbow-cli = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true }
iceberg-rust = { workspace = true }
datafusion_iceberg = { workspace = true }
iceberg-sql-catalog = { git = "https://github.com/jankaul/iceberg-rust", version = "0.6", branch = "copy-if-not-exists" }
async-trait = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "any", "sqlite", "postgres", "mysql"], default-features = false }
frostbow = { path = "../frostbow", no-default-features = true }
openssl.workspace = true
