[package]
name = "frostbow"
version = "0.1.0"
edition = "2021"

description = "Package to use Apache Datafusion with Apache Iceberg"

license = "Apache-2.0"

[dependencies]
clap = { workspace = true }
datafusion = { workspace = true }
frostbow-cli = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true }
iceberg-rust = { workspace = true }
datafusion_iceberg = { workspace = true }
async-trait = { workspace = true }
reqwest = "0.11"
reqwest-middleware = "0.2.0"
iceberg-rest-catalog = {  git = "https://github.com/jankaul/iceberg-rust", version = "0.6", branch = "copy-if-not-exists"   , optional = true }
iceberg-file-catalog = {  git = "https://github.com/jankaul/iceberg-rust", version = "0.6", branch = "copy-if-not-exists"   }
iceberg-s3tables-catalog = {  git = "https://github.com/jankaul/iceberg-rust", version = "0.6", branch = "copy-if-not-exists"   }
url = "2.5"
openssl.workspace = true
aws-config = "1.5.10"
aws-credential-types = "1.2.1"
futures = "0.3.31"

[features]
default = ["rest"]
rest = ["dep:iceberg-rest-catalog"]
