[package]
name = "frostbow"
version = "0.2.0"
edition = "2021"

description = "Package to use Apache Datafusion with Apache Iceberg"

license = "Apache-2.0"

[dependencies]
clap = { workspace = true }
datafusion = { workspace = true }
datafusion-cli = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true }
iceberg-rust = { workspace = true }
datafusion_iceberg = { workspace = true }
async-trait = { workspace = true }
reqwest = "0.11"
reqwest-middleware = "0.2.0"
iceberg-rest-catalog = {  version = "0.8", optional = true, git = "https://github.com/jankaul/iceberg-rust"  }
iceberg-file-catalog = {  version = "0.8", git = "https://github.com/jankaul/iceberg-rust" }
iceberg-s3tables-catalog = { version = "0.8", git = "https://github.com/jankaul/iceberg-rust" }
url = "2.5"
openssl.workspace = true
aws-config = "1.5.16"
aws-credential-types = "1.2.1"
futures = "0.3.31"
secrecy = "0.8"

[features]
default = ["rest"]
rest = ["dep:iceberg-rest-catalog"]
